security_groups.tf
resource "aws_security_group" "lambda" {
  name        = format("%s-lambda-sg", var.project_name)
  description = "Security group para las funciones Lambda"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = format("%s-lambda-sg", var.project_name)
  }
}

resource "aws_security_group" "rds" {
  name        = format("%s-rds-sg", var.project_name)
  description = "Security group para la base de datos RDS"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.lambda.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = format("%s-rds-sg", var.project_name)
  }
}
